--- a/css/styles.css
+++ b/css/styles.css
@@ -136,9 +136,9 @@ ul,ol         { list-style:none; }
 /* Global Styles ========================================================================= */
 /* Form Elements */
 input,select,textarea,button { font:12px/15px Arial, Helvetica, sans-serif; vertical-align:middle; color:#2f2f2f; }
-input.input-text,select,textarea { background:#fff; border:1px solid #b6b6b6; }
+input.input-text,select,textarea { background:#fbeece; border:1px solid #b6b6b6; }
 input.input-text,textarea { padding:2px; }
-select { padding:1px; }
+select { background:#fbeece; padding:1px; }
 select option { padding-right:10px; }
 select.multiselect option { border-bottom:1px solid #b6b6b6; padding:1px 5px; }
 select.multiselect option:last-child { border-bottom:0; }
@@ -483,13 +483,13 @@ tr.summary-details-excluded { font-style:italic; }
 
 .header .top-promo { float:left; width:117px; height:30px; margin:12px 10px 0; background:url(../images/bkg_top-promo.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }
 
-.quick-access { background:#444; color:#fff; padding:7px 13px; text-align:right; }
-.quick-access .welcome-msg { display:inline; margin:0; color:#fff; }
+.quick-access { background:#542b0d; color:#fbeece; padding:7px 13px; text-align:right; }
+.quick-access .welcome-msg { display:inline; margin:0; color:#fbeece; }
 .quick-access .welcome-msg a { color:#ddd; }
 .quick-access .form-language { float:left; }
-.quick-access .form-language label { font-weight:bold; padding-right:5px; color:#fff; vertical-align:middle; }
+.quick-access .form-language label { font-weight:bold; padding-right:5px; color:#fbeece; vertical-align:middle; }
 .quick-access .form-language select { padding:0; }
-.quick-access .form-language select.flags option { background-position:4px 50%; background-repeat:no-repeat; padding-left:25px; }
+.quick-access .form-language select.flags option { background:#542b0d; background-position:4px 50%; background-repeat:no-repeat; padding-left:25px; }
 .quick-access .links { padding-left:8px; }
 .quick-access .links,
 .quick-access .links li { display:inline; }
@@ -512,7 +512,7 @@ tr.summary-details-excluded { font-style:italic; }
 .form-search .search-autocomplete li.odd { background-color:#f6f6f6; }
 .form-search .search-autocomplete li.selected { background-color:#ecf9ea; }
 
-.header-container .top-container { padding:5px 12px; background:#fff; border:1px solid #bbb; border-width:0 1px 1px; text-align:right; }
+.header-container .top-container { padding:5px 12px; background:#fbeece; border:1px solid #bbb; border-width:0 1px 1px; text-align:right; }
 
 /********** < Navigation */
 .nav-container {}
