--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/**
+/*
  * Magento
  *
  * NOTICE OF LICENSE
@@ -299,7 +299,7 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .notice-msg { border-color:#fcd344; background-color:#fafaec; color:#3d6611; }
 
 /* BreadCrumbs */
-.breadcrumbs a { color:#7f7f7f; }
+.breadcrumbs a { color:#5f5f5f; }
 .breadcrumbs li { display:inline; }
 .breadcrumbs li strong { font-weight:bold; }
 
@@ -476,7 +476,6 @@ tr.summary-details-excluded { font-style:italic; }
 /* Header ================================================================================ */
 .logo { float:left; }
 .header-container {}
-
 .header { margin:0 0 12px; }
 .header .logo { float:left; text-decoration:none !important; }
 .header .logo strong { position:absolute; top:-999em; left:-999em; width:0; height:0; font-size:0; line-height:0; text-indent:-999em; overflow:hidden; }
@@ -498,7 +497,7 @@ tr.summary-details-excluded { font-style:italic; }
 .quick-access .links a { padding:0 7px 0 0; background:url(../images/bkg_pipe1.gif) no-repeat 100% 50%; }
 .quick-access .links li.last a { padding:0; background:none; }
 
-.top-bar { padding:3px 12px 2px 12px; border:1px solid #bbb; border-bottom-color:#dedede; background:#efefef; line-height:21px; }
+.top-bar { padding:3px 12px 2px 12px; border:1px solid #c3741a; border-bottom-color:#c3741a; background:#d9811d; line-height:21px; }
 .top-bar .breadcrumbs { float:left; width:580px; overflow:hidden; }
 .form-search { float:right; }
 .form-search label { float:left; font-size:12px; font-weight:bold; padding:0 5px 0 0; }
