--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ input.input-text,select,textarea { background:#fbeece; border:1px solid #b6b6b6;
 input.input-text,textarea { padding:2px; }
 select { background:#fbeece; padding:1px; }
 select option { padding-right:10px; }
-select.multiselect option { border-bottom:1px solid #b6b6b6; padding:1px 5px; }
+select.multiselect option { background:#fbeece;border-bottom:1px solid #b6b6b6; padding:1px 5px; }
 select.multiselect option:last-child { border-bottom:0; }
 textarea { overflow:auto; }
 input.radio { margin-right:3px; }
@@ -538,7 +538,7 @@ tr.summary-details-excluded { font-style:italic; }
 /* 0 Level */
 #nav li { float:left; margin:1px 8px 11px 1px; padding:3px 8px; }
 #nav li.active a { color:#fbeece; }
-#nav a { float:left; background:url(../images/bkg_nav_top.gif) no-repeat 100% 50%; padding-right:11px; color:#fbeece; font-weight:bold; }
+#nav a { float:left; background:url(../images/bkg_nav_top.gif) no-repeat 100% 50%; padding-right:11px; color:#444; font-weight:bold; }
 #nav li.over a,
 #nav a:hover { color:#fbeece; }
 #nav li.over,
@@ -549,7 +549,7 @@ tr.summary-details-excluded { font-style:italic; }
 #nav ul li,
 #nav ul li.active,
 #nav ul li.over { float:none; border:none; background:none; margin:0; padding:0; padding-bottom:1px; text-transform:none; }
-#nav ul li.parent { background:url(../images/bkg_nav_parent.gif) no-repeat 100% 50%; }
+#nav ul li.parent { background:url(../images/bkg_nav_parent.gif) no-repeat 100% 50%; } */
 #nav ul li.last { padding-bottom:0; }
 #nav ul li.active { margin:0; border:0; background:none; }
 #nav ul a,
