--- a/css/styles.css
+++ b/css/styles.css
@@ -542,7 +542,7 @@ tr.summary-details-excluded { font-style:italic; }
 #nav li.over a,
 #nav a:hover { color:#fbeece; }
 #nav li.over,
-#nav li.active { margin:0 7px 10px 0; border:1px solid #bbb; background:#ececec; }
+#nav li.active { margin:0 7px 10px 0; border:1px solid #c3741a; background:#542b0d; }
 
 
 /* 1st Level */
@@ -551,21 +551,21 @@ tr.summary-details-excluded { font-style:italic; }
 #nav ul li.over { float:none; border:none; background:none; margin:0; padding:0; padding-bottom:1px; text-transform:none; }
 #nav ul li.parent { background:url(../images/bkg_nav_parent.gif) no-repeat 100% 50%; } */
 #nav ul li.last { padding-bottom:0; }
-#nav ul li.active { margin:0; border:0; background:none; }
+#nav ul li.active { margin:0; border:0; background:#542b0d;/* background:none;*/ }
 #nav ul a,
-#nav ul a:hover { float:none; padding:0; background:none; }
+#nav ul a:hover { float:none; padding:0; background:#542b0d;/* background:none;*/ }
 #nav ul li a { font-weight:normal !important; }
 
 /* 2nd Level */
 #nav ul,
-#nav div { position:absolute; width:15em; top:22px; left:-10000px; border:1px solid #bbb; border-bottom:2px solid #999; padding:3px 8px; background:#fcfcfc; font-size:11px; }
+#nav div { position:absolute; width:15em; top:22px; left:-10000px; border:1px solid #c3741a; border-bottom:2px solid #c3741a; padding:3px 8px; background:#542b0d; font-size:11px; }
 #nav div ul { position:static; width:auto; border:none; padding:0; }
 
 /* 3rd+ Level */
 #nav ul ul,
 #nav ul div { top:5px; }
 
-#nav ul li a { padding:3px 0; color:#444 !important; }
+#nav ul li a { padding:3px 0; color:#fbeece !important; }
 #nav ul li a:hover { padding:3px 0; color:#5a7f00 !important; }
 
 /* Show menu */
