--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ button.disabled span { color:#bbb !important; }
 /*button.btn-cart span {}*/
 button.btn-checkout span { height:28px; border:0; background-image:url(../images/btn_checkout.gif); padding:0 0 0 6px; font:bold 12px/26px Arial, Helvetica, sans-serif; color:#fbeece; }
 button.btn-checkout span span { padding:0 40px 0 34px; }
-button.btn-checkout.no-checkout span { background-position:0 100%; color:#cfcfcf; }
+button.btn-checkout.no-checkout span { background-position:0 100%; color:#eace9c; }
 button.btn-checkout.no-checkout span span { background-position:100% 100%; }
 
 p.control input.checkbox,
@@ -259,7 +259,7 @@ p.control input.radio { margin-right:6px; }
 .form-list .customer-dob .dob-year { width:140px; }
 .form-list .customer-dob .dob-year input.input-text { width:134px; }
 
-.buttons-set { clear:both; margin:4em 0 0; padding:8px 0 0; border-top:1px solid #e4e4e4; text-align:right; }
+.buttons-set { clear:both; margin:4em 0 0; padding:8px 0 0; border-top:1px solid #444; text-align:right; }
 .buttons-set p.required { margin:0 0 10px; }
 .buttons-set .back-link { float:left; margin:0; }
 .buttons-set button.button { float:right; margin-left:5px; }
@@ -268,7 +268,7 @@ p.control input.radio { margin-right:6px; }
 .buttons-set-order .please-wait { padding:5px 7px 0 0; }
 
 .fieldset { margin:0 10px 25px; }
-.fieldset .legend { margin:0 -10px 12px; background:#f1f1f1; padding:2px 10px; font-size:13px; line-height:1.25; }
+.fieldset .legend { margin:0 -10px 12px; background:#eace9c; padding:2px 10px; font-size:13px; line-height:1.25; }
 
 /* Form Validation */
 .validation-advice { clear:both; min-height:13px; margin:3px 0 0; padding-left:13px; font-size:11px; line-height:13px; background:url(../images/validation_advice_bg.gif) 2px 3px no-repeat; color:#eb340a; }
@@ -348,7 +348,7 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 /* Data Table */
 .data-table { width:100%; }
 .data-table tr.odd  { background:#fbeece }
-.data-table tr.even { background:#fcfcfc; }
+.data-table tr.even { background:#eace9c; }
 .data-table tr.last th,
 .data-table tr.last td { border-bottom:0 !important; }
 .data-table th { padding:2px 8px; font-size:10px; text-transform:uppercase; white-space:nowrap; }
@@ -367,7 +367,7 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .data-table tfoot strong { font-size:14px; }
 /* Bundle products tables */
 .data-table tbody.odd tr { background:#fbeece; }
-.data-table tbody.even tr { background:#fcfcfc; }
+.data-table tbody.even tr { background:#eace9c; }
 .data-table tbody.odd tr td,
 .data-table tbody.even tr td { border-bottom:0; }
 .data-table tbody.odd tr.border td,
@@ -676,7 +676,7 @@ tr.summary-details-excluded { font-style:italic; }
 .compare-table tbody td.last { border-right:1px solid #ccc; }
 .compare-table tbody tr.last th,
 .compare-table tbody tr.last td { border-bottom:1px solid #ccc !important; }
-.compare-table tr.add-to-row td { background:#fbeeceada; text-align:center; }
+.compare-table tr.add-to-row td { background:#fbeece; text-align:center; }
 .compare-table tr.first td { text-align:center; }
 .compare-table tr.first td .product-name { font-size:13px; font-weight:bold; margin:0 0 5px; color:#203548; }
 .compare-table tr.first td .product-name a { color:#203548; }
@@ -806,7 +806,7 @@ tr.summary-details-excluded { font-style:italic; }
 .availability-only-details th { background:#e9e9e9; font-size:10px; padding:0 8px; }
 .availability-only-details td { border-bottom:1px solid #d9dde3; font-size:11px; padding:2px 8px 1px; }
 .availability-only-details tr.odd { background:#fbeece; }
-.availability-only-details tr.even { background:#fcfcfc; }
+.availability-only-details tr.even { background:#eace9c; }
 .availability-only-details tr.odd td.last { color:#396f00; font-weight:bold; }
 .availability-only-details tr.last td { border-bottom:none; }
 
@@ -920,7 +920,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Add to Links + Add to Cart */
 .add-to-box { margin:10px 0; }
-.add-to-box .add-to-cart { margin:10px 0; border:1px solid #eee; background-color:#f8f8f8; padding:10px; text-align:right; }
+.add-to-box .add-to-cart { margin:10px 0; border:1px solid #eee; background-color:#eace9c; padding:10px; text-align:right; }
 .add-to-box .add-to-cart .paypal-logo { float:left; }
 .add-to-box .or { display:none !important; }
 .add-to-box .add-to-links { margin:10px 0; text-align:right; }
@@ -1000,7 +1000,7 @@ tr.summary-details-excluded { font-style:italic; }
 .product-options ul.validation-failed { padding:0 7px; }
 .product-options p.required { position:absolute; right:15px; top:10px; }
 
-.product-options-bottom { background-color:#f6f6f6; padding:15px 20px; border:1px solid #e4e4e4; border-top:0; }
+.product-options-bottom { background-color:#eace9c; padding:15px 20px; border:1px solid #e4e4e4; border-top:0; }
 .product-options-bottom .product-pricing,
 .product-options-bottom .tier-prices { margin:0; padding:0 0 10px; border:0; background:0; }
 .product-options-bottom .price-box { float:left; margin:0; }
@@ -1019,14 +1019,14 @@ tr.summary-details-excluded { font-style:italic; }
 .product-view .grouped-items-table .price-box { margin:0; padding:0; }
 
 /* Product Tabs */
-.product-tabs { margin-bottom:15px; border-bottom:1px solid #666; background:#f2f2f2 url(../images/bkg_tabs.gif) 0 100% repeat-x; }
-.product-tabs li { float:left; border-right:1px solid #a4a4a4; border-left:1px solid #fbeece; font-size:1.1em; line-height:1em; }
+.product-tabs { margin-bottom:15px; border-bottom:1px solid #666; background:#542b0d url(../images/bkg_tabs.gif) 0 100% repeat-x; }
+.product-tabs li { float:left; border-right:1px solid #542b0d; border-left:1px solid #fbeece; font-size:1.1em; line-height:1em; }
 .product-tabs li.first { border-left:0; }
 .product-tabs li.last { border-right:0; }
 .product-tabs a { display:block; padding:6px 15px; color:#444; }
-.product-tabs a:hover { background-color:#ddd; text-decoration:none; color:#444; }
+.product-tabs a:hover { background-color:#eace9c; text-decoration:none; color:#444; }
 .product-tabs li.active a,
-.product-tabs li.active a:hover { background-color:#666; font-weight:bold; color:#fbeece; }
+.product-tabs li.active a:hover { background-color:#542b0d; font-weight:bold; color:#ddd; }
 .product-tabs-content h2 { display:none; font-size:12px; font-weight:bold; }
 
 /* Mini Products Grid */
@@ -1138,13 +1138,13 @@ tr.summary-details-excluded { font-style:italic; }
 .cart .totals .checkout-types .paypal-or { clear:both; display:block; padding:8px 55px 0 0; line-height:1.0; font-size:11px; }
 
 /* Shopping Cart Table */
-.cart-table th { padding:2px 10px; }
-.cart-table td { padding:10px; }
+.cart-table th {background:#c3741a; padding:2px 10px; }
+.cart-table td {  background:#eace9c;padding:10px; }
 .cart-table .product-name { font-weight:bold; margin:0 0 5px; color:#444; }
 .cart-table .item-msg { margin:5px 0; font-size:11px; font-weight:bold; color:#df280a; }
 .cart-table tfoot td { padding:5px 10px; }
 .cart-table .btn-continue { float:left; }
-.cart-table .btn-continue span { background:none; padding:0; font:normal 11px/25px Arial, Helvetica, sans-serif; color:#4f8100; text-transform:none; text-decoration:underline; }
+.cart-table .btn-continue span { background:#eace9c; padding:0; font:normal 11px/25px Arial, Helvetica, sans-serif; color:#4f8100; text-transform:none; text-decoration:underline; }
 .cart-table .btn-continue:hover span { text-decoration:none; }
 .cart-table .btn-update,
 .cart-table .btn-empty { float:right; }
@@ -1153,7 +1153,7 @@ tr.summary-details-excluded { font-style:italic; }
 /* Shopping Cart Collateral boxes */
 .cart .cart-collaterals { padding:25px 0 0; }
 .cart .cart-collaterals .col2-set .col-1 { width:222px; }
-.cart .cart-collaterals .col2-set .col-2 { width:655px; background:#e6f7d7; }
+.cart .cart-collaterals .col2-set .col-2 { width:655px; background:#eace9c; }
 
 .cart .crosssell { border:1px solid #ddd; background:#f7f7f7; padding:10px; }
 .cart .crosssell h2 { font-size:12px; font-weight:bold; }
@@ -1168,7 +1168,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Discount Codes & Estimate Shipping and Tax Boxes */
 .cart .discount,
-.cart .shipping { background:#e6f7d7; padding:10px 0; margin:0 12px; }
+.cart .shipping { background:#eace9c; padding:10px 0; margin:0 12px; }
 .cart .discount h2,
 .cart .shipping h2 { float:left; width:225px; font:normal 14px/16px Arial, Helvetica, sans-serif; color:#d54c01; }
 .cart .discount .discount-form,
@@ -1178,7 +1178,7 @@ tr.summary-details-excluded { font-style:italic; }
 .cart .discount .buttons-set button.button,
 .cart .shipping .buttons-set button.button { float:none; margin:0; }
 .cart .discount .buttons-set button.button span,
-.cart .shipping .buttons-set button.button span { height:19px; background-image:url(../images/bkg_btn-green.gif); padding:0 0 0 9px; font-size:10px; line-height:18px; color:#fbeece; }
+.cart .shipping .buttons-set button.button span { height:19px; background-image:url(../images/bkg_btn-green.gif); padding:0 0 0 9px; font-size:10px; line-height:18px; color:#fbeece; } 
 .cart .discount .buttons-set button.button span span,
 .cart .shipping .buttons-set button.button span span { padding:0 19px 0 10px; }
 
@@ -1194,7 +1194,7 @@ tr.summary-details-excluded { font-style:italic; }
 .cart .shipping .form-list select { width:270px; }
 
 /* Shopping Cart Totals */
-.cart .totals { background:#fbeece url(../images/bkg_cart-totals.gif) 0 0 no-repeat; padding:12px 0; }
+.cart .totals { background:#fbeece; padding:12px 0; }
 .cart .totals table { float:right; width:400px; margin:0 0 8px; }
 .cart .totals td { padding:0 0 0 15px; }
 .cart .totals tr.last td {}
@@ -1281,7 +1281,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Checkout Agreements */
 .checkout-agreements li { margin:30px 0; }
-.checkout-agreements .agreement-content { overflow:auto; height:12em; padding:10px; background:#fbfbfb; border:1px solid #e4e4e4; }
+.checkout-agreements .agreement-content { overflow:auto; height:12em; padding:10px; background:#eace9c; border:1px solid #e4e4e4; }
 .checkout-agreements .agree { margin:0; padding:10px 0 10px 11px; }
 .checkout-agreements .agree input.checkbox { margin-right:6px; }
 .checkout-agreements .agree label { font-weight:bold; color:#555; }
@@ -1341,9 +1341,9 @@ tr.summary-details-excluded { font-style:italic; }
 .opc { position:relative; }
 .opc li.section {}
 
-.opc .step-title { border:1px solid #ddd; border-top-color:#fbeece; background:#eee; padding:4px 8px 6px; text-align:right; }
+.opc .step-title { border:1px solid #ddd; border-top-color:#fbeece; background:#e46b00; padding:4px 8px 6px; text-align:right; }
 .opc .step-title .number { float:left; background:#fbeece; border:1px solid #fbeece; padding:0 3px; margin:0 5px 0 0; font:normal 11px/12px arial, helvetica, sans-serif; color:#444; }
-.opc .step-title h2 { float:left; margin:0; font:bold 12px/14px Arial, Helvetica, sans-serif; color:#999; }
+.opc .step-title h2 { float:left; margin:0; font:bold 12px/14px Arial, Helvetica, sans-serif; color:#e5eed6; }
 .opc .step-title a { display:none; float:right; font-size:11px; line-height:16px; }
 
 .opc .allow .step-title { background:#999; border-color:#999; border-top-color:#fbeece; color:#fbeece; cursor:pointer; }
@@ -1356,10 +1356,10 @@ tr.summary-details-excluded { font-style:italic; }
 .opc .active .step-title h2 { color:#fbeece; }
 .opc .active .step-title a { display:none; }
 
-.opc .step { border:1px solid #ddd; border-top:0; background:#fbfbfb; padding:15px 30px; position:relative; }
+.opc .step { border:1px solid #ddd; border-top:0; background:#eace9c; padding:15px 30px; position:relative; }
 .opc .step .tool-tip { right:30px; }
 
-#opc-login h3 { font-size:13px; border-bottom:1px solid #e4e4e4; padding-bottom:2px; text-transform:uppercase; }
+#opc-login h3 { font-size:13px; border-bottom:1px solid #444; padding-bottom:2px; text-transform:uppercase; }
 #opc-login h4 { font-size:1em; font-weight:bold; margin:0; color:#2f2f2f; }
 
 #opc-shipping_method .buttons-set { border-top:0; }
@@ -1429,7 +1429,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Account Login/Create Pages ============================================================ */
 .account-login .content { min-height:200px; padding:0 10px; }
-.account-login .content h2 { margin:0 -10px 12px; background:#f1f1f1; padding:2px 10px; font-size:13px; line-height:1.25; }
+.account-login .content h2 { margin:0 -10px 12px; background:#eace9c; padding:2px 10px; font-size:13px; line-height:1.25; }
 .account-login .buttons-set {}
 
 .account-create {}
@@ -1485,7 +1485,7 @@ tr.summary-details-excluded { font-style:italic; }
 .box-account .box-head h2 { float:left; margin:0; font-size:14px; font-weight:bold; color:#4f8100; }
 .box-account .box-head a { font-size:10px; text-transform:uppercase; }
 
-.dashboard .box .box-title { background:#f1f1f1; padding:2px 10px; margin:0 0 12px; text-align:right; }
+.dashboard .box .box-title { background:#eace9c; padding:2px 10px; margin:0 0 12px; text-align:right; }
 .dashboard .box .box-title h3,
 .dashboard .box .box-title h4 { float:left; margin:0; font-size:12px; font-weight:bold; line-height:1.35; }
 .dashboard .box .box-title a { font-size:10px; text-transform:uppercase; }
@@ -1499,7 +1499,7 @@ tr.summary-details-excluded { font-style:italic; }
 .dashboard .box-info h4 { font-size:11px; font-weight:bold; }
 
 /* Block: Reviews */
-.dashboard .box-reviews .box-head { background:#f1f1f1; padding:2px 10px; margin:0 0 12px; }
+.dashboard .box-reviews .box-head { background:#eace9c; padding:2px 10px; margin:0 0 12px; }
 .dashboard .box-reviews .box-head h2 { font-size:12px; font-weight:bold; line-height:1.35; color:#444; }
 .dashboard .box-reviews .number { display:none; float:left; font-size:10px; font-weight:bold; line-height:1; color:#fbeece; margin:3px -20px 0 0; padding:2px 3px; background:#0a263c; }
 .dashboard .box-reviews .details { padding:0 10px; }
@@ -1508,7 +1508,7 @@ tr.summary-details-excluded { font-style:italic; }
 .dashboard .box-reviews .ratings { margin:7px 0 0; }
 
 /* Block: Tags */
-.dashboard .box-tags .box-head { background:#f1f1f1; padding:2px 10px; margin:0 0 12px; }
+.dashboard .box-tags .box-head { background:#eace9c; padding:2px 10px; margin:0 0 12px; }
 .dashboard .box-tags .box-head h2 { font-size:12px; font-weight:bold; line-height:1.35; color:#444; }
 .dashboard .box-tags .number { display:none; float:left; font-size:10px; font-weight:bold; line-height:1; color:#fbeece; margin:3px -20px 0 0; padding:2px 3px; background:#0a263c; }
 .dashboard .box-tags .details { padding:0 10px; }
@@ -1520,7 +1520,7 @@ tr.summary-details-excluded { font-style:italic; }
 /********** Dashboard > */
 
 /* Address Book */
-.addresses-list h2 { background:#f1f1f1; padding:2px 10px; margin:0 0 12px; font-size:13px; font-weight:bold; line-height:1.25; }
+.addresses-list h2 { background:#eace9c; padding:2px 10px; margin:0 0 12px; font-size:13px; font-weight:bold; line-height:1.25; }
 .addresses-list h3 { font-weight:bold; font-size:12px; }
 .addresses-list address { margin:0 0 3px; }
 .addresses-list p { margin:0; }
