--- a/css/styles.css
+++ b/css/styles.css
@@ -356,6 +356,10 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .data-table th a { color:#fbeece; }
 .data-table td { padding:3px 8px; }
 
+/* tracklist Table */
+.tracklisttable td { padding:3px 8px; }
+
+
 .data-table thead,
 .data-table thead tr { background:#e9e9e9; }
 
@@ -538,7 +542,7 @@ tr.summary-details-excluded { font-style:italic; }
 /* 0 Level */
 #nav li { float:left; margin:1px 8px 11px 1px; padding:3px 8px; }
 #nav li.active a { color:#fbeece; }
-#nav a { float:left; background:url(../images/bkg_nav_top.gif) no-repeat 100% 50%; padding-right:11px; color:#444; font-weight:bold; }
+#nav a { float:left; background:url(../images/bkg_nav_top.gif) no-repeat 100% 50%; padding-right:11px; color:#fbeece; font-weight:bold; }
 #nav li.over a,
 #nav a:hover { color:#fbeece; }
 #nav li.over,
@@ -739,8 +743,8 @@ tr.summary-details-excluded { font-style:italic; }
 /* View Type: Grid */
 .products-grid { position:relative; }
 .products-grid.last { border-bottom:0; }
-.products-grid li.item { float:left; width:171px; padding:0 0 90px; }
-.products-grid .product-image { display:block; width:170px; height:170px; border:1px solid #ddd; border-width:1px 1px 1px 0; margin:0 0 10px; }
+.products-grid li.item { float:left; width:171px; padding:10px 0px 90px; }
+.products-grid .product-image { display:block; width:170px; height:170px; margin:0 0 10px; }
 .products-grid.first .product-image { border-top:0; }
 .products-grid li.last .product-image { border-right:0; }
 .products-grid .product-name { font-size:12px; margin:0 0 6px; }
